# rpc-rabbitmq

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: HelloWorld.py  RequestHelloWorld.py  testClient.py  testServer.py
src/: README.md  setup.cfg
src/rpc_rabbitmq/: RabbitRpc.py  RabbitRpcServer.py  RpcBaseMethod.py  RpcBaseRequest.py  __init__.py
