[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpc_rabbitmq"
version = "0.0.2"
authors = [
    { name="Adam Gluck"}
]
description = "RPC Server/Client implementation for RabbitMQ"
readme = "package_support/README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pika >= 1.2.1"
]

[project.urls]
"Homepage" = "https://github.com/agluck28/rpc-rabbitmq"
"Bug Tracker" = "https://github.com/agluck28/rpc-rabbitmq/issues"
