[metadata]
name = rpc_rabbitmq
version = 0.0.7
description = RPC Server/Client implementation for RabbitMQ
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls = Homepage=https://github.com/agluck28/rpc-rabbitmq, 
                Issues=https://github.com/agluck28/rpc-rabbitmq/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = pika

[options.package_data]
* = *.md